--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "fs": "0.0.1-security",
+    "material-ui": "^0.16.0",
     "nodemon": "^1.11.0",
     "path": "^0.12.7",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-router": "^2.8.1",
+    "react-tap-event-plugin": "^1.0.0",
     "request": "^2.75.0",
     "underscore": "^1.8.3"
   },
