--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-router": "^2.8.1",
     "react-tap-event-plugin": "^1.0.0",
     "request": "^2.75.0",
+    "request-promise": "^4.1.1",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
