[deploy] - adds support for heroku postinstall

--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server/server.js"
   },
+  "repository": {
+    "type": "git",
+    "postinstall": "webpack",
+    "url": "git+https://github.com/ConsoleGameApi/GameReviewDocs.git"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
