--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server/server.js"
+  },
+  "repository": {
+    "type": "git",
     "postinstall": "webpack",
-    "start": "nodemon server/server.js",
+    "url": "git+https://github.com/ConsoleGameApi/GameReviewDocs.git"
   },
   "author": "",
   "license": "ISC",
